--- a/css/big-day.css
+++ b/css/big-day.css
@@ -1057,144 +1057,8 @@ section.section-events ul.event-list>li .event-details .desc {
 section.section-events ul.event-list>li .event-details .cta a.btn+a.btn {
     margin-left: 1em
 }
-section.section-rsvp form {
-    text-align: center
-}
-section.section-rsvp form>.form-wrapper {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: stretch;
-    align-items: stretch;
-    margin-bottom: 1em
-}
-section.section-rsvp form>.form-wrapper .left {
-    width: 35%
-}
-section.section-rsvp form>.form-wrapper .left input {
-    width: 100%;
-    padding: .5em;
-    border: 0 solid rgba(155, 155, 155, .5);
-    outline: 0;
-    background-color: transparent;
-    border-bottom-width: 1px
-}
-section.section-rsvp form>.form-wrapper .left input+input {
-    margin-top: 1em
-}
-section.section-rsvp form>.form-wrapper .right {
-    width: calc(65% - 1em);
-    margin-left: 1em;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: stretch;
-    align-items: stretch;
-    -webkit-flex-direction: row;
-    flex-direction: row
-}
-section.section-rsvp form>.form-wrapper .right ul.events {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    width: 100%
-}
-section.section-rsvp form>.form-wrapper .right ul.events li {
-    background-size: cover;
-    background-position: center center;
-    cursor: pointer;
-    position: relative;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    flex-direction: column;
-    -webkit-justify-content: center;
-    justify-content: center
-}
-section.section-rsvp form>.form-wrapper .right ul.events li>* {
-    position: relative;
-    z-index: 2
-}
-section.section-rsvp form>.form-wrapper .right ul.events li:before {
-    position: absolute;
-    content: '';
-    display: block;
-    background-color: #000;
-    opacity: .3;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    -webkit-transition: opacity .3s ease;
-    -moz-transition: opacity .3s ease;
-    transition: opacity .3s ease;
-    z-index: 1
-}
-section.section-rsvp form>.form-wrapper .right ul.events li:hover:before {
-    opacity: 0
-}
-section.section-rsvp form>.form-wrapper .right ul.events li:after {
-    position: absolute;
-    display: block;
-    content: '\f00c';
-    font-size: 1em;
-    font-family: FontAwesome;
-    color: #fff;
-    width: 1.5em;
-    height: 1.5em;
-    line-height: 1.5em;
-    top: -.35em;
-    right: -.75em;
-    z-index: 2;
-    background-color: #E86C6C;
-    border-radius: 50%;
-    box-shadow: 0 0 0 3px #fff;
-    -webkit-transform: scale(0);
-    -o-transform: scale(0);
-    -ms-transform: scale(0);
-    transform: scale(0);
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    transition: all .3s ease
-}
-section.section-rsvp form>.form-wrapper .right ul.events li.selected:after {
-    -webkit-transform: scale(1);
-    -o-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1)
-}
-section.section-rsvp form>.form-wrapper .right ul.events li p {
-    margin: 0;
-    color: #fff;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    text-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    padding: 1em
-}
-section.section-rsvp form>.form-wrapper .right ul.events li+li {
-    margin-top: 1em
-}
-section.section-rsvp form>.form-wrapper .right select {
-    display: none;
-    width: 100%;
-    height: 100%;
-    border: 1px solid rgba(155, 155, 155, .5);
-    outline-color: #E86C6C
-}
-section.section-rsvp form>.form-wrapper .right select option {
-    padding: .5em
-}
-section.section-rsvp #message {
-    text-align: center;
-    margin-top: 1em
-}
-section.section-rsvp #message p {
-    margin: 0
+section.section-rsvp {
+	padding: 0;
 }
 section.section-people h3 {
     font-family: 'Dancing Script', cursive;
